# describealign

./: .gitignore  MANIFEST.in  build-requirements.txt  describealign.py  describealign.spec  dist-requirementx.txt  pyproject.toml
.github/workflows/: build-binary.yaml  pypi-publish.yaml  release.yaml  update-version.yaml
describealign/: __main__.py  main.py
